added the update settings endpoint and added the current user endpoint
